--- a/week-5/express/package.json
+++ b/week-5/express/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3"
   }
